Source/Alternet.UI.Pal/Api/FileDialog.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "FileDialog.h"
#include "Window.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API FileDialog* FileDialog_Create_()
{
    return MarshalExceptions<FileDialog*>([&](){
        return new FileDialog();
    });
}

ALTERNET_UI_API c_bool FileDialog_GetOverwritePrompt_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetOverwritePrompt();
    });
}

ALTERNET_UI_API void FileDialog_SetOverwritePrompt_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetOverwritePrompt(value);
    });
}

ALTERNET_UI_API c_bool FileDialog_GetNoShortcutFollow_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetNoShortcutFollow();
    });
}

ALTERNET_UI_API void FileDialog_SetNoShortcutFollow_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetNoShortcutFollow(value);
    });
}

ALTERNET_UI_API c_bool FileDialog_GetFileMustExist_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetFileMustExist();
    });
}

ALTERNET_UI_API void FileDialog_SetFileMustExist_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetFileMustExist(value);
    });
}

ALTERNET_UI_API c_bool FileDialog_GetChangeDir_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetChangeDir();
    });
}

ALTERNET_UI_API void FileDialog_SetChangeDir_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetChangeDir(value);
    });
}

ALTERNET_UI_API c_bool FileDialog_GetPreviewFiles_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetPreviewFiles();
    });
}

ALTERNET_UI_API void FileDialog_SetPreviewFiles_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetPreviewFiles(value);
    });
}

ALTERNET_UI_API c_bool FileDialog_GetShowHiddenFiles_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetShowHiddenFiles();
    });
}

ALTERNET_UI_API void FileDialog_SetShowHiddenFiles_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetShowHiddenFiles(value);
    });
}

ALTERNET_UI_API int FileDialog_GetSelectedFilterIndex_(FileDialog* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetSelectedFilterIndex();
    });
}

ALTERNET_UI_API void FileDialog_SetSelectedFilterIndex_(FileDialog* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetSelectedFilterIndex(value);
    });
}

ALTERNET_UI_API FileDialogMode FileDialog_GetMode_(FileDialog* obj)
{
    return MarshalExceptions<FileDialogMode>([&](){
        return obj->GetMode();
    });
}

ALTERNET_UI_API void FileDialog_SetMode_(FileDialog* obj, FileDialogMode value)
{
    MarshalExceptions<void>([&](){
        obj->SetMode(value);
    });
}

ALTERNET_UI_API c_bool FileDialog_GetAllowMultipleSelection_(FileDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAllowMultipleSelection();
    });
}

ALTERNET_UI_API void FileDialog_SetAllowMultipleSelection_(FileDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowMultipleSelection(value);
    });
}

ALTERNET_UI_API void* FileDialog_OpenFileNamesArray_(FileDialog* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->OpenFileNamesArray();
    });
}

ALTERNET_UI_API int FileDialog_GetFileNamesItemCount_(FileDialog* obj, void* array)
{
    return MarshalExceptions<int>([&](){
        return obj->GetFileNamesItemCount(array);
    });
}

ALTERNET_UI_API NativeStringSpan_C FileDialog_GetFileNamesItemAt_(FileDialog* obj, void* array, int index)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetFileNamesItemAt(array, index);
    });
}

ALTERNET_UI_API void FileDialog_CloseFileNamesArray_(FileDialog* obj, void* array)
{
    MarshalExceptions<void>([&](){
        obj->CloseFileNamesArray(array);
    });
}

ALTERNET_UI_API NativeStringSpan_C FileDialog_GetInitialDirectory_(FileDialog* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetInitialDirectory();
    });
}

ALTERNET_UI_API void FileDialog_SetInitialDirectory_(FileDialog* obj, NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        obj->SetInitialDirectory(*value);
    });
}

ALTERNET_UI_API NativeStringSpan_C FileDialog_GetTitle_(FileDialog* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetTitle();
    });
}

ALTERNET_UI_API void FileDialog_SetTitle_(FileDialog* obj, NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        obj->SetTitle(*value);
    });
}

ALTERNET_UI_API NativeStringSpan_C FileDialog_GetFilter_(FileDialog* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetFilter();
    });
}

ALTERNET_UI_API void FileDialog_SetFilter_(FileDialog* obj, NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        obj->SetFilter(*value);
    });
}

ALTERNET_UI_API NativeStringSpan_C FileDialog_GetFileName_(FileDialog* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetFileName();
    });
}

ALTERNET_UI_API void FileDialog_SetFileName_(FileDialog* obj, NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        obj->SetFileName(*value);
    });
}

ALTERNET_UI_API ModalResult FileDialog_ShowModal_(FileDialog* obj, Window* owner)
{
    return MarshalExceptions<ModalResult>([&](){
        return obj->ShowModal(owner);
    });
}