Source/Alternet.UI/Native/FileDialog.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class FileDialog : NativeObject
    {
        static FileDialog()
        {
        }
        
        public FileDialog()
        {
            SetNativePointer(NativeApi.FileDialog_Create_());
        }
        
        public FileDialog(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public bool OverwritePrompt
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetOverwritePrompt_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetOverwritePrompt_(NativePointer, value);
            }
        }
        
        public bool NoShortcutFollow
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetNoShortcutFollow_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetNoShortcutFollow_(NativePointer, value);
            }
        }
        
        public bool FileMustExist
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetFileMustExist_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetFileMustExist_(NativePointer, value);
            }
        }
        
        public bool ChangeDir
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetChangeDir_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetChangeDir_(NativePointer, value);
            }
        }
        
        public bool PreviewFiles
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetPreviewFiles_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetPreviewFiles_(NativePointer, value);
            }
        }
        
        public bool ShowHiddenFiles
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetShowHiddenFiles_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetShowHiddenFiles_(NativePointer, value);
            }
        }
        
        public int SelectedFilterIndex
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetSelectedFilterIndex_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetSelectedFilterIndex_(NativePointer, value);
            }
        }
        
        public FileDialogMode Mode
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetMode_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetMode_(NativePointer, value);
            }
        }
        
        public bool AllowMultipleSelection
        {
            get
            {
                CheckDisposed();
                return NativeApi.FileDialog_GetAllowMultipleSelection_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.FileDialog_SetAllowMultipleSelection_(NativePointer, value);
            }
        }
        
        public Alternet.UI.NativeStringSpan[] FileNames
        {
            get
            {
                CheckDisposed();
                var array = NativeApi.FileDialog_OpenFileNamesArray_(NativePointer);
                try
                {
                    var count = NativeApi.FileDialog_GetFileNamesItemCount_(NativePointer, array);
                    var result = new System.Collections.Generic.List<Alternet.UI.NativeStringSpan>(count);
                    for (int i = 0; i < count; i++)
                    {
                        var n = NativeApi.FileDialog_GetFileNamesItemAt_(NativePointer, array, i);
                        var item = n;
                        result.Add(item);
                    }
                    return result.ToArray();
                }
                finally
                {
                    NativeApi.FileDialog_CloseFileNamesArray_(NativePointer, array);
                }
            }
            
        }
        
        public Alternet.UI.NativeStringSpan GetInitialDirectory()
        {
            CheckDisposed();
            return NativeApi.FileDialog_GetInitialDirectory_(NativePointer);
        }
        
        public void SetInitialDirectory(Alternet.UI.NativeStringSpan value)
        {
            CheckDisposed();
            var value_Native = value.ToNative();
NativeApi.FileDialog_SetInitialDirectory_(NativePointer, ref value_Native);
        }
        
        public Alternet.UI.NativeStringSpan GetTitle()
        {
            CheckDisposed();
            return NativeApi.FileDialog_GetTitle_(NativePointer);
        }
        
        public void SetTitle(Alternet.UI.NativeStringSpan value)
        {
            CheckDisposed();
            var value_Native = value.ToNative();
NativeApi.FileDialog_SetTitle_(NativePointer, ref value_Native);
        }
        
        public Alternet.UI.NativeStringSpan GetFilter()
        {
            CheckDisposed();
            return NativeApi.FileDialog_GetFilter_(NativePointer);
        }
        
        public void SetFilter(Alternet.UI.NativeStringSpan value)
        {
            CheckDisposed();
            var value_Native = value.ToNative();
NativeApi.FileDialog_SetFilter_(NativePointer, ref value_Native);
        }
        
        public Alternet.UI.NativeStringSpan GetFileName()
        {
            CheckDisposed();
            return NativeApi.FileDialog_GetFileName_(NativePointer);
        }
        
        public void SetFileName(Alternet.UI.NativeStringSpan value)
        {
            CheckDisposed();
            var value_Native = value.ToNative();
NativeApi.FileDialog_SetFileName_(NativePointer, ref value_Native);
        }
        
        public Alternet.UI.ModalResult ShowModal(Window? owner)
        {
            CheckDisposed();
            return NativeApi.FileDialog_ShowModal_(NativePointer, owner?.NativePointer ?? IntPtr.Zero);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr FileDialog_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetOverwritePrompt_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetOverwritePrompt_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetNoShortcutFollow_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetNoShortcutFollow_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetFileMustExist_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetFileMustExist_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetChangeDir_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetChangeDir_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetPreviewFiles_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetPreviewFiles_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetShowHiddenFiles_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetShowHiddenFiles_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int FileDialog_GetSelectedFilterIndex_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetSelectedFilterIndex_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern FileDialogMode FileDialog_GetMode_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetMode_(IntPtr obj, FileDialogMode value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool FileDialog_GetAllowMultipleSelection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetAllowMultipleSelection_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr FileDialog_OpenFileNamesArray_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int FileDialog_GetFileNamesItemCount_(IntPtr obj, System.IntPtr array);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan FileDialog_GetFileNamesItemAt_(IntPtr obj, System.IntPtr array, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_CloseFileNamesArray_(IntPtr obj, System.IntPtr array);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan FileDialog_GetInitialDirectory_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetInitialDirectory_(IntPtr obj, ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan FileDialog_GetTitle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetTitle_(IntPtr obj, ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan FileDialog_GetFilter_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetFilter_(IntPtr obj, ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan FileDialog_GetFileName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void FileDialog_SetFileName_(IntPtr obj, ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.ModalResult FileDialog_ShowModal_(IntPtr obj, IntPtr owner);
            
        }
    }
}
